# periodic-audit

./: Cargo.toml  README.md  build.sh  create-user.sh  install-cargo-audit.sh  install.sh  periodic-audit.conf  periodic-audit.service  periodic-audit.timer
.github/workflows/: ci.yml
scripts/: lib.sh  makerelease.sh
src/: audit.rs  config.rs  mail.rs  main.rs  report.rs  systemd.rs
src/report/: command.rs  file.rs  mail.rs
