# -*- coding: utf-8 -*-

[package]
name = "periodic-audit"
description = "A tool to run cargo-audit periodically and send email reports."
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
repository = "https://github.com/mbuesch/periodic-audit"
readme = "README.md"
categories = [ "security", "command-line-utilities" ]
keywords = [ "cargo-audit", "security", "email", "report" ]
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive", "wrap_help", "unicode" ] }
lettre = { version = "0.11", default-features = false, features = [ "tokio1", "builder", "smtp-transport", "tokio1-rustls", "ring", "webpki-roots" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "rt", "fs", "process", "time" ] }
toml = { version = "0.9", features = [ "serde" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
sd-notify = "0.4"

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = true

# vim: ts=4 sw=4 expandtab
