# -*- coding: utf-8 -*-

[package]
name = "periodic-audit"
description = "A tool to run cargo-audit periodically and send email reports."
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
repository = "https://github.com/mbuesch/periodic-audit"
readme = "README.md"
categories = [ "security", "command-line-utilities" ]
keywords = [ "cargo-audit", "security", "email", "report" ]

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive", "wrap_help", "unicode" ] }
lettre = { version = "0.11", default-features = false, features = [ "tokio1", "builder", "smtp-transport", "tokio1-rustls", "ring", "webpki-roots" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "rt", "fs", "process", "time", "sync", "macros" ] }
toml = { version = "0.9", features = [ "serde" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
sd-notify = "0.4"

[workspace.lints.clippy]
# Lints from `cargo` group
cargo = "warn"
multiple-crate-versions = { level = "allow", priority = 1 }

# Lints from `pedantic` group
pedantic = "warn"
default_trait_access = { level = "allow", priority = 1 }
missing-errors-doc = { level = "allow", priority = 1 }
missing-panics-doc = { level = "allow", priority = 1 }
similar-names = { level = "allow", priority = 1 }
struct-excessive-bools = { level = "allow", priority = 1 }

# Lints from `restriction` group
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
mem_forget = "warn"
precedence_bits = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = true

# vim: ts=4 sw=4 expandtab
